# Splunk_auto_doc

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  INPUTS_PROJECTION_SUMMARY.md  MIGRATION_VERIFICATION.md  MILESTONE_1_COMPLETION.md  MILESTONE_2_MIGRATION_VERIFICATION.md  MILESTONE_2_SUMMARY.md  Makefile  NORMALIZATION_PIPELINE_IMPLEMENTATION.md  OUTPUTS_PROJECTION_SUMMARY.md  PARSER_COMPLETION.md  PRD.md  QUICK_REFERENCE.md  README.md  RETRY_FAILURE_IMPLEMENTATION.md  RETRY_FLOW_DIAGRAMS.md  STREAMING_UPLOAD_SUMMARY.md  TESTING.md  TEST_SUITE_SUMMARY.md  TOOLING_SUMMARY.md  UPLOAD_TEST_SUMMARY.md  WORKER_IMPLEMENTATION.md  demo_worker.sh  docker-compose.yml  nginx.conf  package-lock.json  pyproject.toml  splunk_data_lineage_overview.md  test-db-readiness.sh  test-docker-compose.sh  test-pre-commit.sh  test_worker_setup.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml
backend/: Dockerfile  alembic.ini  debug_models.py  mock_server.py  test_debug.py  test_manual.db
backend/alembic/: README  env.py
backend/alembic/versions/: 001_initial_schema.py  002_stanzas_and_typed.py  003_indexes_and_perf.py  004_add_parsing_status.py  005_add_retry_tracking.py  006_add_normalized_status.py
backend/app/: __init__.py  config.py  health.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  health.py  runs.py  uploads.py  worker.py
backend/app/core/: __init__.py  config.py  db.py  logging.py  middleware.py  types.py
backend/app/models/: __init__.py  file.py  index.py  ingestion_run.py  input.py  output.py  props.py  serverclass.py  stanza.py  transform.py
backend/app/parser/: README.md  __init__.py  core.py  exceptions.py  types.py
backend/app/projections/: README.md  __init__.py  demo.py  indexes.py  inputs.py  outputs.py  props.py  serverclasses.py  transforms.py
backend/app/schemas/: __init__.py  file.py  index.py  ingestion_run.py  input.py  output.py  props.py  serverclass.py  transform.py
backend/app/storage/: __init__.py  base.py  local.py  s3.py
backend/app/worker/: __init__.py  celery_app.py  exceptions.py  tasks.py
backend/examples/: logging_demo.py
backend/scripts/: run_migration.sh  test_migration.py  wait-for-db.sh  wait_for_db.py
backend/tests/: __init__.py  conftest.py  ensure_models.py  test_api_endpoints.py  test_basic.py  test_database_setup.py  test_db_readiness.py  test_error_handling.py  test_health.py  test_health_simulation.py  test_health_v1.py  test_logging.py  test_models.py  test_normalization_pipeline.py  test_parse_status.py  test_parse_trigger.py  test_retry_failure_handling.py  test_runs.py  test_runs_fixed.py  test_schemas.py  test_simple_debug.py  test_status_lifecycle.py  test_status_lifecycle_integration.py  test_storage.py  test_typed_listings.py  test_upload_streaming.py  test_uploads.py  test_worker_integration.py  validate_tests.py  verify_output_projector.py
backend/tests/parser/: __init__.py  demo_parser.py  test_golden_fixtures.py  test_parser_core.py
backend/tests/parser/fixtures/: hf_inputs.conf  indexes.conf  outputs.conf  props.conf  serverclass.conf  transforms.conf
backend/tests/projections/: __init__.py  test_index_projector.py  test_index_projector_integration.py  test_input_projector.py  test_input_projector_integration.py  test_output_projector.py  test_output_projector_integration.py  test_props_projector.py  test_props_projector_integration.py  test_serverclass_projector.py  test_serverclass_projector_integration.py  test_transform_projector.py  test_transform_projector_integration.py
docs/: db-readiness.md  memory-safe-uploads.md  normalization-model.md  parser-spec.md  worker-setup.md
docs/adr/: 0001-frontend-graph-stitching.md  ADR-001-core-stack.md  README.md
docs/issues/: 01-basic-lineage-topology.md  02-visualizing-throughput-loss.md  03-interactive-inspector-panel.md  04-contextual-focus-mode.md  05-intelligent-node-aggregation.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  runs.ts
frontend/src/components/: StatusBadge.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: HomePage.tsx  RunDetailPage.tsx  RunsPage.tsx  UploadPage.tsx
frontend/src/test/: ApiClient.test.ts  HomePage.test.tsx  MainLayout.test.tsx  Navigation.test.tsx  RunDetailPage.test.tsx  setup.ts
frontend/src/types/: api.ts
notes/: Project description.md  database-schema.md  github-instructions.md  logging-implementation.md  milestone-1-gap-analysis.md  milestone-1-plan.md  milestone-2-gap-analysis.md  milestone-2-plan.md  planning notes
splunk_config/hf_app/default/: outputs.conf
splunk_config/sh_idx_app/default/: indexes.conf
splunk_config/uf1_app/default/: inputs.conf
splunk_config/uf2_app/default/: inputs.conf  outputs.conf
splunk_config/uf3_app/default/: inputs.conf  outputs.conf
splunk_config/uf4_app/default/: inputs.conf
splunk_data_lineage/appserver/static/visualizations/data_lineage/: package-lock.json  package.json  visualization.js  webpack.config.js
splunk_data_lineage/appserver/static/visualizations/data_lineage/src/: aggregationHelpers.js  dataTransformer.js  filterHelpers.js  inspectorPanel.js  styleHelpers.js  visualization.js
splunk_data_lineage/appserver/static/visualizations/data_lineage/tests/: aggregationHelpers.test.js  backendSchema.test.js  dataTransformer.test.js  filterHelpers.test.js  inspectorPanel.test.js  styleHelpers.test.js
splunk_data_lineage/default/: app.conf  savedsearches.conf  visualizations.conf
splunk_data_lineage/default/data/ui/views/: lineage_overview.xml
splunk_data_lineage/local/: savedsearches.conf
